# boxoffice.int

./: .gitignore  README.md  _explore_cinetel.py  dev.ps1  init_db.ps1  pyproject.toml  requirements.txt
.github/workflows/: backfill.yml  daily_pipeline.yml
Context AI/: codice scraper.txt  contesto tecnico.txt  integrazione cinetel e fine settimana.txt  modello dati.txt  roadmap_implementazione_neon.md  strategia_scraping_cinetel.txt  streategia_aggiunta_nuovo_autore_0.txt
contracts/: box_office_raw_daily.schema.yaml  film_metadata.schema.yaml  market_analytics_kpis.schema.yaml
docs/: architecture.md  data_model.md  neon_setup.md
schema/: schema.sql  seed_dim_distributor.sql  seed_dim_genre.sql
src/boxoffice_int/: common.py  contracts.py  pipeline.py
src/boxoffice_int.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/boxoffice_int/domain/: __init__.py
src/boxoffice_int/domain/box_office_raw/: __init__.py  cineguru_scraper.py  cinetel_scraper.py  sunday_fallback.py
src/boxoffice_int/domain/film_metadata/: __init__.py  tmdb_client.py
src/boxoffice_int/domain/market_analytics/: __init__.py  build_product.py
src/boxoffice_int/warehouse/: __init__.py  enrich_db.py  loader.py  schema.sql
tests/: test_build_market_analytics.py  test_cineguru_new_author.py  test_cinetel_scraper.py  test_contracts.py  test_sunday_fallback.py
tests/fixtures/: cinetel_html_for_scrape.html  fine_settimana_article.html
