[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "boxoffice-int"
version = "0.1.0"
description = "Data product pipeline — box office Italia (Data Mesh)"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.3",
    "pandas==2.2.3",
    "pandera>=0.18",
    "playwright==1.50.0",
    "pyarrow==19.0.1",
    "pyyaml>=6.0",
    "requests==2.32.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
boxoffice-int = "boxoffice_int.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]
